--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-one-page-wonder.git"
     },
     "dependencies": {
-        "bootstrap": "5.1.3"
+        "bootstrap": "5.1.3",
+        "simplycountdown.js": "^1.7.0"
     },
     "devDependencies": {
         "autoprefixer": "10.4.4",
-        "browser-sync": "2.27.9",
+        "browser-sync": "^2.29.0",
         "chokidar": "3.5.3",
         "concurrently": "6.3.0",
         "postcss": "8.4.12",
